--- a/shell/Cargo.toml
+++ b/shell/Cargo.toml
@@ -47,6 +47,7 @@ uzers = "0.11.3"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
+pprof = { version = "0.13.0", features = ["criterion", "flamegraph"] }
 
 [[bench]]
 name = "shell"
