Add --sh-mode, fix a number of redirection cases
* Add tests around compound cmd redirection/pipes
* Do away with 'capture_output' flag
* Pass open_files through ExecutionParameters
* Get tests passing
* Use pipes for output capture (not temp files)
* Fix function output redirection
* Add --sh-mode
* Add more impl to 'set' builtin

--- a/cli/tests/cases/compound_cmds/for.yaml
+++ b/cli/tests/cases/compound_cmds/for.yaml
@@ -16,3 +16,12 @@ cases:
             echo $f
           done
     args: ["./script.sh"]
+
+  - name: "For loop piped"
+    known_failure: true
+    stdin: |
+      for f in ab ac bd ef; do echo $f; done | grep b
+
+  - name: "For loop output redirection"
+    stdin: |
+      for f in a b c; do echo $f; done > ./out.txt
