--- a/cli/tests/cases/redirection.yaml
+++ b/cli/tests/cases/redirection.yaml
@@ -30,13 +30,15 @@ cases:
       echo hi >&2
 
   - name: "Process substitution: input"
-    known_failure: true
     stdin: |
       shopt -u -o posix
-      cat <(echo hi)
+      var="value"
+      cat <(var="updated"; echo ${var})
+      echo "Done."
+      echo "${var}"
 
-  - name: "Process substitution: input + output"
-    known_failure: true
-    stdin: |
-      shopt -u -o posix
-      cp <(echo hi) >(cat)
+  # - name: "Process substitution: input + output"
+  #   known_failure: true
+  #   stdin: |
+  #     shopt -u -o posix
+  #     cp <(echo hi) >(cat)
