--- a/cli/tests/cases/arithmetic.yaml
+++ b/cli/tests/cases/arithmetic.yaml
@@ -85,7 +85,7 @@ cases:
       echo "x is now $x"
 
   - name: "Assignments in logical boolean expressions"
-    known_failure: true
+    known_failure: true # Issue #153
     stdin: |
       x=0
       echo "0 && x+=1 => $(( 0 && (x+=1) ))"
