--- a/cli/tests/cases/compound_cmds/for.yaml
+++ b/cli/tests/cases/compound_cmds/for.yaml
@@ -18,7 +18,7 @@ cases:
     args: ["./script.sh"]
 
   - name: "For loop piped"
-    known_failure: true
+    known_failure: true # Issue #150
     stdin: |
       for f in ab ac bd ef; do echo $f; done | grep b
 
