--- a/cli/tests/cases/word_expansion.yaml
+++ b/cli/tests/cases/word_expansion.yaml
@@ -253,7 +253,7 @@ cases:
       echo "  -> result: $?"
 
   - name: "Parameter expression: error on condition (non-interactive)"
-    known_failure: true
+    known_failure: true # Issue #155
     ignore_stderr: true
     stdin: |
       echo "${non_existent_var?error message}"
@@ -413,7 +413,7 @@ cases:
       echo "${var@L}"
 
   - name: "Parameter quote transformations"
-    known_failure: true
+    known_failure: true # Issue #155
     stdin: |
       var="Hello, world!"
       echo "\${var@Q}: ${var@Q}"
@@ -427,19 +427,19 @@ cases:
       echo "\${arr@k}: ${arr@k}"
 
   - name: "Parameter transformations: expand escapes"
-    known_failure: true
+    known_failure: true # Issue #155
     stdin: |
       var="a\n\"b"
       echo "\${var@E}: ${var@E}"
 
   - name: "Parameter transformation: assignment"
-    known_failure: true
+    known_failure: true # Issue #155
     stdin: |
       declare -ia arr=(1 2 3)
       echo "\${arr@A}: ${arr@A}"
 
   - name: "Parameter transformation: attributes"
-    known_failure: true
+    known_failure: true # Issue #155
     stdin: |
       declare -ia arr=(1 2 3)
       echo "\${arr@a}: ${arr@a}"
