--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -10,6 +10,11 @@ name = "brush"
 path = "src/main.rs"
 bench = false
 
+[[test]]
+name = "integration_tests"
+path = "tests/integration_tests.rs"
+harness = false
+
 [lints]
 workspace = true
 
@@ -33,6 +38,7 @@ dir-cmp = "0.1.0"
 expectrl = "0.7.1"
 glob = "0.3.1"
 indent = "0.1.1"
+junit-report = "0.8.3"
 pathdiff = "0.2.1"
 prettydiff = { version = "0.6.4", default-features = false }
 regex = "1.10.4"
