--- a/deny.toml
+++ b/deny.toml
@@ -24,9 +24,9 @@ version = 2
 #db-path = "$CARGO_HOME/advisory-dbs"
 #db-urls = ["https://github.com/rustsec/advisory-db"]
 ignore = [
-    # We only use ansi_term via dev dependency; we somewhat make sure that
-    # doesn't widen through bans.
-    { id = "RUSTSEC-2021-0139", reason = "ansi_term" }
+    "RUSTSEC-2023-0064",
+    "RUSTSEC-2024-0013",
+    "RUSTSEC-2024-0335"
 ]
 #git-fetch-with-cli = true
 
@@ -42,7 +42,9 @@ allow = [
     "Apache-2.0",
     "BSL-1.0",
     "MIT",
-    "Unicode-DFS-2016"
+    "Unicode-DFS-2016",
+    "BSD-3-Clause",
+    "MPL-2.0"
 ]
 # The confidence threshold for detecting a license from license text.
 # The higher the value, the more closely the license text must be to the
@@ -70,10 +72,12 @@ external-default-features = "allow"
 allow = []
 # List of crates to deny
 deny = [
-    # ansi_term is unmaintained; only allow prettydiff to use it
-    { crate = "ansi_term", wrappers = ["prettydiff"] },
-    # don't let use of prettydiff spread (and it's only a dev dependency)
-    { crate = "prettydiff", wrappers = ["brush-cli"] }
+    # gix-transport has known issues (see ignored advisories below); for now we
+    # only allow it to be used in cargo-patch.
+    { crate = "gix-transport", wrappers = ["gix", "gix-protocol"] },
+    { crate = "gix-protocol", wrappers = ["gix"] },
+    { crate = "gix", wrappers = ["cargo"] },
+    { crate = "cargo", wrappers = ["cargo-patch"] }
 ]
 
 # List of features to allow/deny
