--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 resolver = "2"
 members = ["cli", "parser", "shell", "interactive-shell"]
+default-members = ["cli", "parser", "shell", "interactive-shell"]
 
 [workspace.package]
 edition = "2021"
@@ -28,3 +29,23 @@ struct_excessive_bools = "allow"
 opt-level = "z"
 lto = true
 codegen-units = 1
+
+[build-dependencies]
+cargo-patch = "0.3.2"
+
+[patch.crates-io]
+rustyline = { path = './target/patch/rustyline-14.0.0' }
+
+[package]
+name = "brush-root"
+version = "0.1.0"
+build = "build.rs"
+
+[lib]
+name = "root"
+
+[package.metadata.patch.rustyline]
+version = "14.0.0"
+patches = [
+    { path = "patches/rustyline.patch", source = "GithubPrDiff" }
+]
