--- a/cli/tests/cases/arithmetic.yaml
+++ b/cli/tests/cases/arithmetic.yaml
@@ -42,6 +42,11 @@ cases:
       echo "1 ? 2 : 3 == $((1?2:3))"
       echo "0 ? 2 : 3 == $((0?2:3))"
 
+  - name: "Arithmetic with spacing"
+    known_failure: true
+    stdin: |
+      echo $(( 75 + 68 ))
+
   - name: "Divide by zero"
     ignore_stderr: true
     stdin: |
