--- a/shell/Cargo.toml
+++ b/shell/Cargo.toml
@@ -20,6 +20,7 @@ brush-parser = { path = "../parser" }
 clap = { version = "4.5.4", features = ["derive"] }
 exec = "0.3.1"
 faccess = "0.2.4"
+fancy-regex = "0.13.0"
 futures = "0.3.30"
 glob = "0.3.1"
 hostname = "0.4.0"
