Reduce anyhow usage; fix tests

--- a/cli/tests/cases/arithmetic.yaml
+++ b/cli/tests/cases/arithmetic.yaml
@@ -1,5 +1,9 @@
 name: "Arithmetic"
 cases:
+  - name: "Empty expression"
+    stdin: |
+      echo $(())
+
   - name: "Unquoted arithmetic"
     stdin: |
       echo $((1+1))
