--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ redundant_closure_for_method_calls = "allow"
 redundant_else = "allow"
 similar_names = "allow"
 struct_excessive_bools = "allow"
+result_large_err = "allow"
 
 [profile.release]
 opt-level = "z"
