--- a/interactive-shell/Cargo.toml
+++ b/interactive-shell/Cargo.toml
@@ -18,6 +18,7 @@ brush-parser = { path = "../parser" }
 brush-shell = { path = "../shell" }
 log = "0.4.21"
 rustyline = { version = "14.0.0", features = ["derive"] }
+thiserror = "1.0.58"
 tokio = { version = "1.37.0", features = [
     "macros",
     "signal",
